Introduce usage of sass

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "html-de": "template-html sources/index_de.html -t sources/template.html",
     "html-en": "template-html sources/index.html -t sources/template.html",
-    "html": "npm run html-de && npm run html-en"
+    "html": "npm run html-de && npm run html-en",
+    "sass": "node-sass --include-path scss scss/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/fraulyoner/fraulyoner.github.io#readme",
   "devDependencies": {
+    "node-sass": "^4.5.2",
     "template-html": "^0.3.0"
   }
 }
