--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
   ],
   "dependencies": {
     "fontawesome": "~4.5.0",
-    "normalize.css": "~3.0.3",
-    "jquery": "1.11.0"
+    "normalize.css": "~3.0.3"
   }
 }
