--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fraulyoner.github.io",
-  "version": "0.2.0-SNAPSHOT",
+  "version": "0.2.0",
   "author": "Aljona Buchloh",
   "description": "My personal homepage",
   "license": "none",
