Build content no longer with npm, use Jekyll instead

--- a/package.json
+++ b/package.json
@@ -6,23 +6,17 @@
   "license": "none",
   "scripts": {
     "bower": "bower install",
-    "html": "template-html sources/index_de.html -t sources/template.html && template-html sources/index.html -t sources/template.html",
     "sass": "node-sass --include-path scss scss/main.scss css/style.css",
     "minify": "minify css/style.css",
-    "build": "npm run html && npm run sass && npm run minify"
+    "build": "npm run sass && npm run minify"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fraulyoner/fraulyoner.github.io.git"
   },
-  "bugs": {
-    "url": "https://github.com/fraulyoner/fraulyoner.github.io/issues"
-  },
-  "homepage": "https://github.com/fraulyoner/fraulyoner.github.io#readme",
   "devDependencies": {
     "bower": "^1.8.0",
     "minifier": "^0.8.1",
-    "node-sass": "^4.5.2",
-    "template-html": "^0.3.0"
+    "node-sass": "^4.5.2"
   }
 }
