--- a/package.json
+++ b/package.json
@@ -5,18 +5,13 @@
   "description": "My personal homepage",
   "license": "none",
   "scripts": {
-    "bower": "bower install",
-    "sass": "node-sass --include-path scss scss/main.scss css/style.css",
-    "minify": "minify css/style.css",
-    "build": "npm run sass && npm run minify"
+    "bower": "bower install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fraulyoner/fraulyoner.github.io.git"
   },
   "devDependencies": {
-    "bower": "^1.8.0",
-    "minifier": "^0.8.1",
-    "node-sass": "^4.5.2"
+    "bower": "^1.8.0"
   }
 }
