--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ user:
   github: https://github.com/fraulyoner
   twitter: https://twitter.com/FrauLyoner
   instagram: https://www.instagram.com/fraulyoner/
+  pinterest: https://www.pinterest.de/fraulyoner/
 
 links:
   location: https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f
