--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ links:
   where2dump: https://where2dump.com
   lettering: https://www.smashingmagazine.com/2013/01/understanding-difference-between-type-and-lettering/
   blog: https://www.meinimalismus.de/
+  agile: https://blog.fraulyoner.de/
 
 # Set the Sass partials directory due to use of @imports
 sass:
