Update blog description

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ links:
   uv: https://github.com/synyx/urlaubsverwaltung
   where2dump: https://where2dump.com
   lettering: https://www.smashingmagazine.com/2013/01/understanding-difference-between-type-and-lettering/
-  blog: https://www.meinimalismus.de/
+  blog: https://www.gedankenshift.de/
   agile: https://blog.fraulyoner.de/
 
 # Set the Sass partials directory due to use of @imports
