Update mail address

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: fraulyoner
 
 user:
-  email: aljona.buchloh@gmail.com
+  email: hallo@fraulyoner.de
   github: https://github.com/fraulyoner
   twitter: https://twitter.com/FrauLyoner
   instagram: https://www.instagram.com/fraulyoner/
