--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ links:
   location: https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f
   lettering: https://www.smashingmagazine.com/2013/01/understanding-difference-between-type-and-lettering/
   blog: https://www.gedankenshift.de/
-  agile: https://blog.fraulyoner.de/
+  agile: https://www.fraulyoner.de/agile/
   work: https://synyx.de/
 
 # Set the Sass partials directory due to use of @imports
