Use for now the second last remote theme version
* due to problems with scss variable $font-height-code

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-remote_theme: sylhare/Type-on-Strap
+remote_theme: sylhare/Type-on-Strap@v2.2.1
 
 # THEME-SPECIFIC CONFIGURATION
 title: fraulyoner.de
