--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,3 +1,5 @@
 location: https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f
 gedankenshift: https://www.gedankenshift.de/
 agile: https://www.fraulyoner.de/agile/
+artboxone: https://www.artboxone.de/
+artboxone-artist: https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller
