Update location link

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,4 @@
-location: https://www.google.de/maps/place/Karlsruhe/@49.0157643,8.269451,11z/data=!4m2!3m1!1s0x47970648a2e07809:0xb6fc55734cb7ee7f
+location: https://www.google.de/maps/place/Weststadt,+Karlsruhe/@49.0081542,8.3682823,15z/data=!3m1!4b1!4m5!3m4!1s0x479706f739a124e7:0x4b438558cbb0969a!8m2!3d49.0092444!4d8.3770641
 gedankenshift: https://www.gedankenshift.de/
 flipcharts: https://www.pinterest.de/fraulyoner/agile-coaching/
 artboxone: https://www.artboxone.de/
