--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 location: https://www.google.de/maps/place/Weststadt,+Karlsruhe/@49.0081542,8.3682823,15z/data=!3m1!4b1!4m5!3m4!1s0x479706f739a124e7:0x4b438558cbb0969a!8m2!3d49.0092444!4d8.3770641
 gedankenshift: https://www.gedankenshift.de/
 flipcharts: https://www.pinterest.de/fraulyoner/agile-coaching/
-artboxone: https://www.artboxone.de/
-artboxone-artist: https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller
+artboxone: https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller
+etsy: https://www.etsy.com/de/shop/fraulyonerDE
