Disable RSS since blog is disabled

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 # Icons on the footer
-rss: true
+rss: false
 email_address: hallo@fraulyoner.de # Full email address, e.g. "sam@example.com"
 behance:
 bitbucket:
