Add link and info about new Spreadshirt shop

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -3,3 +3,4 @@ gedankenshift: https://www.gedankenshift.de/
 flipcharts: https://www.pinterest.de/fraulyoner/agile-coaching/
 artboxone: https://www.artboxone.de/wandbilder/poster-im-kunststoffrahmen/frau-lyoner/bestseller
 etsy: https://www.etsy.com/de/shop/fraulyonerDE
+spreadshirt: https://shop.spreadshirt.de/fraulyoner/
