Remove Twitter and Instagram links

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -8,7 +8,7 @@ facebook:
 flickr:
 gitlab:
 github:
-instagram: "fraulyoner"
+instagram:
 keybase:
 linkedin: # Full URL
 pinterest: "fraulyoner"
@@ -18,7 +18,7 @@ stack_overflow:
 stack_exchange: # Full URL
 steam:
 tumblr:
-twitter: "fraulyoner" # Twitter username
+twitter: # Twitter username
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
